# DNSCache

./: CMakeLists.txt  README.md  build-Winx86.bat  build.sh
src/: CMakeLists.txt  dns_cache.cpp  dns_cache.h
tests/: CMakeLists.txt  dns_cache_test.cpp  dns_cache_time_test.cpp
